src/main/resources/Krakatau-master/tests/assembler/bad/duprawdef.j
.class public whocares
.super java/lang/Object

.const [1] = Int 4
.const [1] = Int 5
.end class
